--- a/foundry.toml
+++ b/foundry.toml
@@ -17,6 +17,7 @@
   cache_path  = "cache_forge"
   libs = ["node_modules", "lib"]
   gas_reports_ignore = ["LockTest"]
+  via_ir = true
 
 [profile.ci]
   fuzz = { runs = 10_000 }
