hardhat base utils i

--- a/package.json
+++ b/package.json
@@ -7,34 +7,40 @@
     "url": "https://github.com/bcnmy"
   },
   "dependencies": {
+    "@biconomy-devx/erc7579-msa": "^0.0.4",
     "@openzeppelin/contracts": "^5.0.1",
     "hardhat": "^2.20.1"
   },
   "devDependencies": {
     "@bonadocs/docgen": "^1.0.1-alpha.1",
+    "@ethersproject/abstract-provider": "^5.7.0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.6",
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-foundry": "^1.1.1",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.4",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@prb/test": "^0.6.4",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.11",
     "@types/mocha": ">=10.0.6",
     "@types/node": ">=20.11.19",
+    "account-abstraction": "github:eth-infinitism/account-abstraction#develop",
     "chai": "^4.3.7",
     "codecov": "^3.8.3",
     "ethers": "^6.11.1",
     "forge-std": "github:foundry-rs/forge-std#v1.7.6",
-    "modulekit": "github:rhinestonewtf/modulekit",
-    "solady": "github:vectorized/solady",
-    "account-abstraction": "github:eth-infinitism/account-abstraction#develop",
+    "hardhat-deploy": "^0.11.45",
+    "hardhat-deploy-ethers": "^0.4.1",
     "hardhat-gas-reporter": "^1.0.10",
     "hardhat-storage-layout": "^0.1.7",
+    "modulekit": "github:rhinestonewtf/modulekit",
     "prettier": "^3.2.5",
     "prettier-plugin-solidity": "^1.3.1",
+    "sentinellist": "github:zeroknots/sentinellist",
+    "solady": "github:vectorized/solady",
     "solhint": "^4.1.1",
     "solhint-plugin-prettier": "^0.1.0",
     "solidity-coverage": "^0.8.7",
