forge install: nexus

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/nexus.git"]
 	path = lib/nexus.git
 	url = https://github.com/bcnmy/nexus.git
+[submodule "lib/nexus"]
+	path = lib/nexus
+	url = https://github.com/bcnmy/nexus
