--- a/foundry.toml
+++ b/foundry.toml
@@ -5,7 +5,6 @@
   block_timestamp = 1_680_220_800 # March 31, 2023 at 00:00 GMT
   bytecode_hash = "none"
   evm_version = "paris"           # See https://www.evmdiff.com/features?name=PUSH0&kind=opcode
-  fuzz = { runs = 1_000 }
   gas_reports = ["*"]
   optimizer = true
   optimizer_runs = 1_000_000
@@ -18,6 +17,10 @@
   libs = ["node_modules", "lib"]
   gas_reports_ignore = ["LockTest"]
   via_ir = true
+
+[fuzz]
+    runs = 1_000 
+    max_test_rejects = 1_000_000
 
 [profile.ci]
   fuzz = { runs = 10_000 }
