--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,5 +46,5 @@ jobs:
       - name: Build Typechain and Foundry
         run: yarn build
 
-      - name: Run Forge and Hardhat Tests
+      - name: Run Forge Tests
         run: yarn test
