--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install Foundry Dependencies
         run: forge install
 
-      - name: Generate Hardhat & Foundry Coverage Report
+      - name: Generate Foundry Coverage Report
         run: yarn coverage:report
 
       - name: Upload Foundry Coverage Report to Codecov
@@ -36,9 +36,3 @@ jobs:
           file: ./coverage/foundry/lcov.info
           flags: foundry
 
-      - name: Upload Hardhat Coverage Report to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage/lcov.info
-          flags: hardhat
