--- a/package.json
+++ b/package.json
@@ -8,22 +8,13 @@
   },
   "dependencies": {
     "@biconomy-devx/erc7579-msa": "^0.0.4",
-    "@openzeppelin/contracts": "^5.0.1",
-    "hardhat": "^2.20.1"
+    "@openzeppelin/contracts": "^5.0.1"
   },
   "devDependencies": {
     "@bonadocs/docgen": "^1.0.1-alpha.1",
     "@ethersproject/abstract-provider": "^5.7.0",
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.6",
-    "@nomicfoundation/hardhat-ethers": "^3.0.5",
-    "@nomicfoundation/hardhat-foundry": "^1.1.1",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
-    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.4",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@prb/test": "^0.6.4",
     "@typechain/ethers-v6": "^0.5.1",
-    "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.11",
     "@types/mocha": ">=10.0.6",
     "@types/node": ">=20.11.19",
@@ -31,10 +22,6 @@
     "chai": "^4.3.7",
     "codecov": "^3.8.3",
     "ethers": "^6.11.1",
-    "hardhat-deploy": "^0.11.45",
-    "hardhat-deploy-ethers": "^0.4.1",
-    "hardhat-gas-reporter": "^1.0.10",
-    "hardhat-storage-layout": "^0.1.7",
     "modulekit": "github:rhinestonewtf/modulekit",
     "prettier": "^3.2.5",
     "prettier-plugin-solidity": "^1.3.1",
@@ -52,31 +39,22 @@
     "ethereum",
     "forge",
     "foundry",
-    "hardhat",
     "smart-contracts",
     "solidity"
   ],
   "private": true,
   "scripts": {
     "clean:forge": "forge clean",
-    "clean:hardhat": "yarn hardhat clean",
-    "clean": "yarn run clean:forge && yarn run clean:hardhat && rm -rf cache docs coverage storageLayout coverage.json",
+    "clean": "yarn run clean:forge && rm -rf cache docs coverage storageLayout coverage.json",
     "build:forge": "forge build",
-    "build:hardhat": "yarn hardhat compile",
-    "build": "yarn run build:forge && yarn run build:hardhat",
+    "build": "yarn run build:forge",
     "test:forge": "forge test",
-    "test:hardhat": "yarn hardhat test",
-    "test": "yarn run test:hardhat && yarn run test:forge",
+    "test": "yarn run test:forge",
     "test:gas:forge": "forge test --gas-report",
-    "test:gas:hardhat": "REPORT_GAS=true hardhat test",
-    "test:gas": "yarn test:gas:hardhat && yarn test:gas:forge",
+    "test:gas": "yarn test:gas:forge",
     "coverage:forge": "forge coverage",
-    "coverage:hardhat": "yarn hardhat coverage",
-    "coverage": "yarn run coverage:forge && yarn run coverage:hardhat",
-    "coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage/foundry && mv lcov.info coverage/foundry && yarn run coverage:hardhat",
-    "docs": "yarn hardhat docgen",
-    "check-storage": "yarn hardhat check",
-    "deploy:hardhat": "yarn hardhat run --network localhost scripts/typescript/deploy.ts",
+    "coverage": "yarn run coverage:forge",
+    "coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage/foundry && mv lcov.info coverage/foundry",
     "deploy:forge": "forge script scripts/solidity/Deploy.s.sol --broadcast --rpc-url http://localhost:8545",
     "lint:sol": "yarn solhint 'contracts/**/*.sol' && forge fmt --check",
     "lint:sol-fix": "yarn prettier --write 'contracts/**/*.sol' && yarn solhint 'contracts/**/*.sol' --fix --noPrompt && forge fmt",
