--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@uniswap/v3-periphery": "https://github.com/Uniswap/v3-periphery#0.8",
     "accountabstraction": "https://github.com/eth-infinitism/account-abstraction#develop",
     "excessively-safe-call": "github:nomad-xyz/ExcessivelySafeCall",
-    "nexus": "https://github.com/bcnmy/nexus#feat/remap-fix"
+    "nexus": "https://github.com/bcnmy/nexus#dev"
   },
   "devDependencies": {
     "@bonadocs/docgen": "^1.0.1-alpha.1",
