--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@bonadocs/docgen": "^1.0.1-alpha.1",
     "@ethersproject/abstract-provider": "^5.7.0",
-    "@openzeppelin": "https://github.com/OpenZeppelin/openzeppelin-contracts/",
+    "@openzeppelin": "https://github.com/OpenZeppelin/openzeppelin-contracts#master",
     "@prb/test": "^0.6.4",
     "@typechain/ethers-v6": "^0.5.1",
     "@types/chai": "^4.3.11",
