--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+         node-version: '22' # Specify the Node.js version you want to use  
+
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn cache clean && yarn install
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
