--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -8,15 +8,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+         node-version: '22' # Specify the Node.js version you want to use
 
       - name: Install lcov (for genhtml)
         run: sudo apt-get update && sudo apt-get install -y lcov
 
       - name: Install JavaScript Dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn cache clean && yarn install
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
