--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     "test": "yarn run test:forge",
     "test:gas:forge": "forge test --gas-report",
     "test:gas": "yarn test:gas:forge",
-    "coverage:forge": "forge coverage",
+    "coverage:forge": "forge coverage --ir-minimum",
     "coverage": "yarn run coverage:forge",
-    "coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage/foundry && mv lcov.info coverage/foundry",
+    "coverage:report": "forge coverage --ir-minimum --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage/foundry && mv lcov.info coverage/foundry",
     "deploy:forge": "forge script scripts/solidity/Deploy.s.sol --broadcast --rpc-url http://localhost:8545",
     "lint:sol": "yarn solhint 'contracts/**/*.sol' && forge fmt --check",
     "lint:sol-fix": "yarn prettier --write 'contracts/**/*.sol' && yarn solhint 'contracts/**/*.sol' --fix --noPrompt && forge fmt",
