--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/bcnmy"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "5.0.2",
     "@rhinestone/modulekit": "^0.4.10",
     "@uniswap/v3-core": "https://github.com/Uniswap/v3-core#0.8",
     "@uniswap/v3-periphery": "https://github.com/Uniswap/v3-periphery#0.8",
@@ -14,11 +15,9 @@
     "nexus": "https://github.com/bcnmy/nexus#dev"
   },
   "devDependencies": {
-    "erc7579": "https://github.com/erc7579/erc7579-implementation",
-    "@openzeppelin": "https://github.com/OpenZeppelin/openzeppelin-contracts#master",
-    "excessively-safe-call": "github:nomad-xyz/ExcessivelySafeCall",
     "@bonadocs/docgen": "^1.0.1-alpha.1",
     "@ethersproject/abstract-provider": "^5.7.0",
+    "@openzeppelin": "https://github.com/OpenZeppelin/openzeppelin-contracts#master",
     "@prb/test": "^0.6.4",
     "@typechain/ethers-v6": "^0.5.1",
     "@types/chai": "^4.3.11",
@@ -27,7 +26,9 @@
     "account-abstraction": "github:eth-infinitism/account-abstraction#develop",
     "chai": "^4.3.7",
     "codecov": "^3.8.3",
+    "erc7579": "https://github.com/erc7579/erc7579-implementation",
     "ethers": "^6.11.1",
+    "excessively-safe-call": "github:nomad-xyz/ExcessivelySafeCall",
     "module-bases": "github:rhinestonewtf/module-bases",
     "modulekit": "github:rhinestonewtf/modulekit",
     "prettier": "^3.2.5",
