--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
          node-version: '22' # Specify the Node.js version you want to use  
 
       - name: Install dependencies
-        run: yarn cache clean && yarn install
+        run: pnpm install
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
@@ -25,7 +25,7 @@ jobs:
         run: forge install
 
       - name: Lint sources
-        run: yarn lint:sol
+        run: pnpm lint:sol
 
   unit_test:
     name: Unit tests
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: yarn cache clean && yarn install
+        run: pnpm install
 
       - name: Create a fake .secret file
         run: echo "primary twist rack vendor diagram image used route theme frown either will" > .secret
@@ -49,7 +49,7 @@ jobs:
         run: forge install
 
       - name: Build Typechain and Foundry
-        run: yarn build
+        run: pnpm build
 
       - name: Run Forge Tests
-        run: yarn test
+        run: pnpm test
