--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "modulekit": "github:rhinestonewtf/modulekit",
     "prettier": "^3.2.5",
     "prettier-plugin-solidity": "^1.3.1",
-    "sentinellist": "github:zeroknots/sentinellist",
+    "sentinellist": "github:rhinestonewtf/sentinellist",
     "solady": "github:vectorized/solady",
     "solhint": "^4.1.1",
     "solhint-plugin-prettier": "^0.1.0",
