--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -21,7 +21,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y lcov
 
       - name: Install JavaScript Dependencies
-        run: pnpm install
+        run: pnpm install --ignore-scripts
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
