--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "lint": "pnpm run lint:sol && pnpm run format:check",
     "lint:ts": "pnpm prettier --check 'test/**/*.ts' 'scripts/**/*.ts'",
     "lint:ts-fix": "pnpm prettier --write 'test/**/*.ts' 'scripts/**/*.ts'",
+    "lint:sol-fix": "pnpm prettier --write 'contracts/**/*.sol' && pnpm solhint 'contracts/**/*.sol' --fix --noPrompt && forge fmt",
     "lint:fix": "pnpm run lint:sol-fix && pnpm run lint:ts-fix"
   }
 }
