--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "test": "pnpm run test:forge",
     "test:gas:forge": "forge test --gas-report",
     "test:gas": "pnpm test:gas:forge",
-    "coverage:forge": "forge coverage --ir-minimum",
+    "coverage:forge": "forge coverage --ir-minimum --gas-limit 50000000 --gas-price 1000000000",
     "coverage": "pnpm run coverage:forge",
-    "coverage:report": "forge coverage --ir-minimum --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage/foundry && mv lcov.info coverage/foundry",
+    "coverage:report": "forge coverage --ir-minimum --gas-limit 50000000 --gas-price 1000000000 --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage/foundry && mv lcov.info coverage/foundry",
     "deploy:forge": "forge script scripts/solidity/Deploy.s.sol --broadcast --rpc-url http://localhost:8545",
     "lint:sol": "pnpm solhint 'contracts/**/*.sol'",
     "format:check": "forge fmt --check",
